# LLM-Finetuning-Blog-Twin

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS_AND_DESIGN.md  cli.py  colab_gpu_test.ipynb  pipeline_config.yaml  pyproject.toml  requirements.txt  test_gpu_finetuning.ipynb
api/: server.py
api/models/: schemas.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  ComparisonView.jsx  Header.jsx  ModelSelector.jsx  PromptInput.jsx  ResponseDisplay.jsx
frontend/src/services/: api.js
models/blogging_twin/: Modelfile  train.jsonl
prompts/: test_prompts.txt
src/: data_ingestion.py  dataset_prep.py  deploy.py  evaluate.py  finetune.py  pipeline.py
test_output/: valid.jsonl
